[Slav Petkov] Created BasicTariffCalculation

--- a/Verivox/Verivox.TariffComparison.Tests/Verivox.TariffComparison.Tests.csproj
+++ b/Verivox/Verivox.TariffComparison.Tests/Verivox.TariffComparison.Tests.csproj
@@ -37,6 +37,8 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Calculation\BasicElectricityTariffCalculationTests.cs" />
+    <Compile Include="Core\Common\ConsumptionCostTests.cs" />
     <Compile Include="Core\Common\ConsumptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
