[Slav Petkov] Implemented Packaed Tariff calculation models

--- a/Verivox/Verivox.TariffComparison.Tests/Verivox.TariffComparison.Tests.csproj
+++ b/Verivox/Verivox.TariffComparison.Tests/Verivox.TariffComparison.Tests.csproj
@@ -38,6 +38,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Calculation\BasicElectricityTariffCalculationTests.cs" />
+    <Compile Include="Core\Calculation\PackagedTariffHighConsumptionCalculationTests.cs" />
+    <Compile Include="Core\Calculation\PackagedTariffLowConsumptionCalculationTests.cs" />
     <Compile Include="Core\Common\ConsumptionCostTests.cs" />
     <Compile Include="Core\Common\ConsumptionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
