[Slav Petkov] Implemented Console client

--- a/Verivox/Verivox.TariffComparison.Tests/Verivox.TariffComparison.Tests.csproj
+++ b/Verivox/Verivox.TariffComparison.Tests/Verivox.TariffComparison.Tests.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Core\Calculation\PackagedTariffLowConsumptionCalculationTests.cs" />
     <Compile Include="Core\Common\ConsumptionCostTests.cs" />
     <Compile Include="Core\Common\ConsumptionTests.cs" />
+    <Compile Include="Core\Tariffs\TariffNameTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
